fixed dark mode except tiles

--- a/appGrid.css
+++ b/appGrid.css
@@ -3,7 +3,6 @@
     --clr-secondary-400: 123 46% 34%;
     --clr-secondary-500: 261 73% 69%; /*Premiere Pro*/
     --clr-neutral-100: 0 0% 100%;/*Chnage all white to blue*/
-    /* --clr-neutral-200: 0 0% 13%; /*background color */
     --clr-neutral-300: 0 0% 74%;
 
     --ff-primary: "Barlow Semi Condensed", sans-serif;
@@ -98,8 +97,6 @@ body {
 
     font-family: var(--ff-primary);
     font-weight: var(--fw-400);
-
-    background-color: hsl(var(--clr-neutral-200));
 }
 
 h1,
